# X11_GUI

./: CMakeLists.txt  README.md  rebuild.sh
src/common/: element.h  x11_gui.cc  x11_gui.h  x11_window.h
src/lib/common/: x11_gui.cc  x11_gui.h
src/test/: test_gui.cc  test_window.cc
